# pico-assist

./: .gitignore  .gitmodules  LICENSE  README.md  picocalc.yaml  register.sh  secrets.example.yaml
component/adafruit_gfx/: Adafruit_ILI9341.h  __init__.py  adafruit_gfx.cpp  adafruit_gfx.h  gfxtest.cpp  gfxtest.h
component/ctx_gfx/: CMakeLists.txt  Cousine-Regular.h  Roboto-Regular.h  __init__.py  a85.c  backend-rasterizer.c  config.h  constants.h  css.c  css.h  ctx-extra.h  ctx-font-ascii.h  ctx-internal copy.h  ctx-internal.h  ctx-pico-ili9341.c  ctx-pico-st7789.c  ctx-split.h  ctx-stdio.c  ctx-string.c  ctx.c  ctx.h  ctx_config.h  ctx_gfx.cpp  ctx_gfx.h  ctx_wrapper.h  demo.c  drawlist.c  drawlist.h  libc.c  miniz.c  squoze.h  utf8.c  utf8.h  util.h  version.h
component/ctx_gfx/fonts/: Makefile  ctx-font-ascii.h
component/lib/lvgl/: lvgl.yaml
component/picocalc/: __init__.py  picocalc.cpp  picocalc.h  picocalc.yaml
scripts/: pico.sh  setup.sh
